--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -1,5 +1,26 @@
 {
   "itemGroup.beemancer": "Beemancer",
+  
   "block.beemancer.storage_crate": "Storage Crate",
-  "container.beemancer.storage_crate": "Storage Crate"
+  "container.beemancer.storage_crate": "Storage Crate",
+  
+  "entity.beemancer.debug_bee": "Debug Bee",
+  
+  "item.beemancer.bee_debug": "Debug Bee",
+  "item.beemancer.bee_debug.shift_hint": "Press SHIFT for more details",
+  "item.beemancer.bee_debug.stat.hp": "HP: %s",
+  "item.beemancer.bee_debug.stat.speed": "Speed: %s",
+  "item.beemancer.bee_debug.stat.strength": "Strength: %s",
+  
+  "item.beemancer.bee_wand": "Bee Wand",
+  "item.beemancer.bee_wand.has_selection": "Bee selected",
+  "item.beemancer.bee_wand.no_selection_hint": "No bee selected",
+  "item.beemancer.bee_wand.selected": "Bee selected!",
+  "item.beemancer.bee_wand.deselected": "Selection cleared",
+  "item.beemancer.bee_wand.destination_set": "Destination set!",
+  "item.beemancer.bee_wand.bee_lost": "Selected bee no longer exists",
+  "item.beemancer.bee_wand.no_selection": "Select a bee first!",
+  "item.beemancer.bee_wand.usage1": "Right-click bee: Select",
+  "item.beemancer.bee_wand.usage2": "Right-click block: Set destination",
+  "item.beemancer.bee_wand.usage3": "Shift+Right-click air: Clear selection"
 }
