--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -33,8 +33,59 @@
   "item.beemancer.bee_wand.usage2": "Right-click block: Set destination",
   "item.beemancer.bee_wand.usage3": "Shift+Right-click air: Clear selection",
   
+  "item.beemancer.codex": "Beemancer Codex",
+  
   "gui.beemancer.bee_creator.edit": "Edit",
   "gui.beemancer.magic_hive.breeding_mode": "Breeding Mode Active",
+  
+  "screen.beemancer.codex": "Beemancer Codex",
+  
+  "codex.beemancer.page.bee": "Bees",
+  "codex.beemancer.page.alchemy": "Alchemy",
+  "codex.beemancer.page.logistics": "Logistics",
+  
+  "codex.beemancer.locked": "???",
+  "codex.beemancer.click_to_unlock": "Click to unlock",
+  "codex.beemancer.unlock_parent_first": "Unlock the previous node first",
+  
+  "codex.beemancer.bee.introduction.title": "Introduction to Beemancy",
+  "codex.beemancer.bee.introduction.desc": "Begin your journey as a Beemancer",
+  "codex.beemancer.bee.first_bee.title": "Your First Bee",
+  "codex.beemancer.bee.first_bee.desc": "Capture and nurture your first magic bee",
+  "codex.beemancer.bee.bee_wand.title": "The Bee Wand",
+  "codex.beemancer.bee.bee_wand.desc": "Learn to control bees with the magic wand",
+  "codex.beemancer.bee.magic_hive.title": "Magic Hive",
+  "codex.beemancer.bee.magic_hive.desc": "Build a home for your magical bees",
+  "codex.beemancer.bee.breeding.title": "Bee Breeding",
+  "codex.beemancer.bee.breeding.desc": "Combine genes to create new bee species",
+  "codex.beemancer.bee.gene_mastery.title": "Gene Mastery",
+  "codex.beemancer.bee.gene_mastery.desc": "Master the art of genetic manipulation",
+  
+  "codex.beemancer.alchemy.alchemy_basics.title": "Alchemy Basics",
+  "codex.beemancer.alchemy.alchemy_basics.desc": "Learn the fundamentals of bee alchemy",
+  "codex.beemancer.alchemy.honey_extraction.title": "Honey Extraction",
+  "codex.beemancer.alchemy.honey_extraction.desc": "Extract magical honey from your bees",
+  "codex.beemancer.alchemy.propolis.title": "Propolis",
+  "codex.beemancer.alchemy.propolis.desc": "Harvest propolis for crafting",
+  "codex.beemancer.alchemy.royal_jelly.title": "Royal Jelly",
+  "codex.beemancer.alchemy.royal_jelly.desc": "Create the precious royal jelly",
+  "codex.beemancer.alchemy.bee_essence.title": "Bee Essence",
+  "codex.beemancer.alchemy.bee_essence.desc": "Distill pure bee essence",
+  "codex.beemancer.alchemy.transmutation.title": "Transmutation",
+  "codex.beemancer.alchemy.transmutation.desc": "Transform materials using bee magic",
+  
+  "codex.beemancer.logistics.logistics_intro.title": "Logistics Introduction",
+  "codex.beemancer.logistics.logistics_intro.desc": "Organize your apiary efficiently",
+  "codex.beemancer.logistics.storage_basics.title": "Storage Basics",
+  "codex.beemancer.logistics.storage_basics.desc": "Store bee products safely",
+  "codex.beemancer.logistics.item_transport.title": "Item Transport",
+  "codex.beemancer.logistics.item_transport.desc": "Move items around your base",
+  "codex.beemancer.logistics.incubator.title": "Incubator",
+  "codex.beemancer.logistics.incubator.desc": "Hatch bee larvae into adults",
+  "codex.beemancer.logistics.bee_pipes.title": "Bee Pipes",
+  "codex.beemancer.logistics.bee_pipes.desc": "Transport bees automatically",
+  "codex.beemancer.logistics.automation.title": "Full Automation",
+  "codex.beemancer.logistics.automation.desc": "Create a fully automated apiary",
   
   "gene.category.beemancer.species": "Species",
   "gene.category.beemancer.environment": "Environment",
