fix alchi 3, remove fluid

--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -13,21 +13,14 @@
   "block.beemancer.nectar_filter": "Nectar Filter",
   "block.beemancer.crystallizer": "Crystallizer",
   "block.beemancer.alembic": "Alembic",
-  "block.beemancer.infuser": "Infuser",
   
   "fluid.beemancer.honey": "Honey",
   "fluid.beemancer.royal_jelly": "Royal Jelly",
   "fluid.beemancer.nectar": "Nectar",
-  "fluid.beemancer.fire_nectar": "Fire Nectar",
-  "fluid.beemancer.frost_nectar": "Frost Nectar",
-  "fluid.beemancer.storm_nectar": "Storm Nectar",
   
   "item.beemancer.honey_bucket": "Honey Bucket",
   "item.beemancer.royal_jelly_bucket": "Royal Jelly Bucket",
   "item.beemancer.nectar_bucket": "Nectar Bucket",
-  "item.beemancer.fire_nectar_bucket": "Fire Nectar Bucket",
-  "item.beemancer.frost_nectar_bucket": "Frost Nectar Bucket",
-  "item.beemancer.storm_nectar_bucket": "Storm Nectar Bucket",
   "item.beemancer.beeswax": "Beeswax",
   "item.beemancer.propolis": "Propolis",
   "item.beemancer.royal_comb": "Royal Comb",
@@ -37,15 +30,17 @@
   "item.beemancer.honey_crystal": "Honey Crystal",
   "item.beemancer.enriched_honey_crystal": "Enriched Honey Crystal",
   "item.beemancer.radiant_honey_crystal": "Radiant Honey Crystal",
-  "item.beemancer.fire_pollen": "Fire Pollen",
-  "item.beemancer.frost_pollen": "Frost Pollen",
-  "item.beemancer.storm_pollen": "Storm Pollen",
   
   "container.beemancer.storage_crate": "Storage Crate",
   "container.beemancer.bee_creator": "Bee Creator",
   "container.beemancer.magic_hive": "Magic Hive",
   "container.beemancer.incubator": "Incubator",
+  "container.beemancer.manual_centrifuge": "Manual Centrifuge",
   "container.beemancer.powered_centrifuge": "Powered Centrifuge",
+  "container.beemancer.honey_tank": "Honey Tank",
+  "container.beemancer.nectar_filter": "Nectar Filter",
+  "container.beemancer.crystallizer": "Crystallizer",
+  "container.beemancer.alembic": "Alembic",
   
   "entity.beemancer.magic_bee": "Magic Bee",
   
