--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -13,21 +13,14 @@
   "block.beemancer.nectar_filter": "Filtre à Nectar",
   "block.beemancer.crystallizer": "Cristalliseur",
   "block.beemancer.alembic": "Alambic",
-  "block.beemancer.infuser": "Infuseur",
   
   "fluid.beemancer.honey": "Miel",
   "fluid.beemancer.royal_jelly": "Gelée Royale",
   "fluid.beemancer.nectar": "Nectar",
-  "fluid.beemancer.fire_nectar": "Nectar de Feu",
-  "fluid.beemancer.frost_nectar": "Nectar de Givre",
-  "fluid.beemancer.storm_nectar": "Nectar de Foudre",
   
   "item.beemancer.honey_bucket": "Seau de Miel",
   "item.beemancer.royal_jelly_bucket": "Seau de Gelée Royale",
   "item.beemancer.nectar_bucket": "Seau de Nectar",
-  "item.beemancer.fire_nectar_bucket": "Seau de Nectar de Feu",
-  "item.beemancer.frost_nectar_bucket": "Seau de Nectar de Givre",
-  "item.beemancer.storm_nectar_bucket": "Seau de Nectar de Foudre",
   "item.beemancer.beeswax": "Cire d'Abeille",
   "item.beemancer.propolis": "Propolis",
   "item.beemancer.royal_comb": "Rayon Royal",
@@ -37,15 +30,17 @@
   "item.beemancer.honey_crystal": "Cristal de Miel",
   "item.beemancer.enriched_honey_crystal": "Cristal de Miel Enrichi",
   "item.beemancer.radiant_honey_crystal": "Cristal de Miel Radiant",
-  "item.beemancer.fire_pollen": "Pollen de Feu",
-  "item.beemancer.frost_pollen": "Pollen de Givre",
-  "item.beemancer.storm_pollen": "Pollen de Foudre",
   
   "container.beemancer.storage_crate": "Caisse de Stockage",
   "container.beemancer.bee_creator": "Créateur d'Abeilles",
   "container.beemancer.magic_hive": "Ruche Magique",
   "container.beemancer.incubator": "Incubateur",
+  "container.beemancer.manual_centrifuge": "Centrifugeuse Manuelle",
   "container.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
+  "container.beemancer.honey_tank": "Réservoir de Miel",
+  "container.beemancer.nectar_filter": "Filtre à Nectar",
+  "container.beemancer.crystallizer": "Cristalliseur",
+  "container.beemancer.alembic": "Alambic",
   
   "entity.beemancer.magic_bee": "Abeille Magique",
   
