--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -10,9 +10,10 @@
   "block.beemancer.powered_centrifuge": "Powered Centrifuge",
   "block.beemancer.honey_tank": "Honey Tank",
   "block.beemancer.honey_pipe": "Honey Pipe",
-  "block.beemancer.nectar_filter": "Nectar Filter",
+  "block.beemancer.item_pipe": "Item Pipe",
   "block.beemancer.crystallizer": "Crystallizer",
   "block.beemancer.alembic": "Alembic",
+  "block.beemancer.infuser": "Infuser",
   
   "fluid.beemancer.honey": "Honey",
   "fluid.beemancer.royal_jelly": "Royal Jelly",
@@ -23,7 +24,13 @@
   "item.beemancer.nectar_bucket": "Nectar Bucket",
   "item.beemancer.beeswax": "Beeswax",
   "item.beemancer.propolis": "Propolis",
+  "item.beemancer.pollen": "Pollen",
+  "item.beemancer.honeyed_wood": "Honeyed Wood",
+  "item.beemancer.common_comb": "Common Comb",
+  "item.beemancer.noble_comb": "Noble Comb",
+  "item.beemancer.diligent_comb": "Diligent Comb",
   "item.beemancer.royal_comb": "Royal Comb",
+  "item.beemancer.royal_honey_crystal": "Royal Honey Crystal",
   "item.beemancer.raw_crystal_shard": "Raw Crystal Shard",
   "item.beemancer.enriched_crystal_shard": "Enriched Crystal Shard",
   "item.beemancer.radiant_crystal_shard": "Radiant Crystal Shard",
@@ -38,9 +45,9 @@
   "container.beemancer.manual_centrifuge": "Manual Centrifuge",
   "container.beemancer.powered_centrifuge": "Powered Centrifuge",
   "container.beemancer.honey_tank": "Honey Tank",
-  "container.beemancer.nectar_filter": "Nectar Filter",
   "container.beemancer.crystallizer": "Crystallizer",
   "container.beemancer.alembic": "Alembic",
+  "container.beemancer.infuser": "Infuser",
   
   "entity.beemancer.magic_bee": "Magic Bee",
   
