--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -10,9 +10,10 @@
   "block.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
   "block.beemancer.honey_tank": "Réservoir de Miel",
   "block.beemancer.honey_pipe": "Tuyau de Miel",
-  "block.beemancer.nectar_filter": "Filtre à Nectar",
+  "block.beemancer.item_pipe": "Tuyau d'Items",
   "block.beemancer.crystallizer": "Cristalliseur",
   "block.beemancer.alembic": "Alambic",
+  "block.beemancer.infuser": "Infuseur",
   
   "fluid.beemancer.honey": "Miel",
   "fluid.beemancer.royal_jelly": "Gelée Royale",
@@ -23,7 +24,13 @@
   "item.beemancer.nectar_bucket": "Seau de Nectar",
   "item.beemancer.beeswax": "Cire d'Abeille",
   "item.beemancer.propolis": "Propolis",
+  "item.beemancer.pollen": "Pollen",
+  "item.beemancer.honeyed_wood": "Bois Miellé",
+  "item.beemancer.common_comb": "Rayon Commun",
+  "item.beemancer.noble_comb": "Rayon Noble",
+  "item.beemancer.diligent_comb": "Rayon Diligent",
   "item.beemancer.royal_comb": "Rayon Royal",
+  "item.beemancer.royal_honey_crystal": "Cristal de Miel Royal",
   "item.beemancer.raw_crystal_shard": "Éclat de Cristal Brut",
   "item.beemancer.enriched_crystal_shard": "Éclat de Cristal Enrichi",
   "item.beemancer.radiant_crystal_shard": "Éclat de Cristal Radiant",
@@ -38,9 +45,9 @@
   "container.beemancer.manual_centrifuge": "Centrifugeuse Manuelle",
   "container.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
   "container.beemancer.honey_tank": "Réservoir de Miel",
-  "container.beemancer.nectar_filter": "Filtre à Nectar",
   "container.beemancer.crystallizer": "Cristalliseur",
   "container.beemancer.alembic": "Alambic",
+  "container.beemancer.infuser": "Infuseur",
   
   "entity.beemancer.magic_bee": "Abeille Magique",
   
